Integrate rxjava in to netty layer